--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     
     <!-- Bootstrap component CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- main css -->
+    <link rel="stylesheet" href="style.css">
 
-    <title>Clotish</title>
+    <title>Anylab</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="d-flex w-100 align-items-center justify-content-center" style="height: 100vh;">
+            <h1 class="display-4 fw-bold text-center text-muted my-5">
+                Website under maintenance
+            </h1>
+        </div>
+    </div>
     <!-- Bootstrap component js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
