--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                         </div>
                         <div class="col-lg-4">
                             <h2 class="title fs-3 fw-bold mb-4">Sewa Alat Lab</h2>
-                            <form action="#" method="get">
-                                <input type="text" class="form-control py-3 px-3 mb-3" placeholder="Sewa Alat Kebutuhan Laboratorium">
-                                <input type="number" class="form-control py-3 px-3 mb-3" placeholder="Nomor Telepon">
-                                <button type="submit" class="mb-3 btn btn-lg btn-primary w-100 bg-dark-blue" style="border: none;">Mulai disini</button>
-                            </form>
+                            <!-- <form action="" method="get"> -->
+                                <input type="text" id="input2" class="form-control py-3 px-3 mb-3" placeholder="Sewa Alat Kebutuhan Laboratorium">
+                                <input type="number" id="input3" class="form-control py-3 px-3 mb-3" placeholder="Nomor Telepon">
+                                <button type="submit" id="btn-mulai" class="mb-3 btn btn-lg btn-primary w-100 bg-dark-blue" style="border: none;">Mulai disini</button>
+                            <!-- </form> -->
                         </div>
                     </div>
                 </div>
@@ -382,6 +382,31 @@
             cursorChar: '|',
             autoInsertCss: true
         });
+
+        var btnMulai = document.querySelector('#btn-mulai')
+
+        btnMulai.addEventListener('click', function() {
+            let input2 = document.querySelector('#input2')
+            let input3 = document.querySelector('#input3')
+
+            // generate message
+            var messageHeader = `
+            Hello admin Anylab.id. Berikut pesanan saya
+            Rincian Barang :
+            ${input2.value}
+            `
+
+            // shipping info
+            var shippingInfoText = `
+            Nomor HP : ${input3.value}
+            `
+            var textMessage = encodeURI(messageHeader+shippingInfoText);
+            // sent message
+            var messageNumber = "+6285852067795"
+            var uri = "https://api.whatsapp.com/send?text=" + textMessage + "&phone=" + messageNumber
+            
+            return window.location.href = uri;
+        })
     </script>
     <!-- Bootstrap component js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
